# shawzin-auto

./: .flake8  .pre-commit-config.yaml  main.py  pyproject.toml  shawzin_auto.py
.github/: CODEOWNERS  dependabot.yml
