[tool.poetry]
name = "shawzin-auto"
version = "1.0"
description = "Auto Play, Record and Validate your Shawzin!"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
ahk = "^0.12.0"
pytesseract = "^0.3.8"


[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pydeps = "^1.9.13"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile='black'

[tool.black]
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
